Fixing issue when sending play command for a sound with spaces in the name. Just have to surround the sound file name in quotes and it will now work.